k8s/helloredis/helloredis.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: helloredis
  name: helloredis
  labels:
    app: helloredis
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
        app: helloredis
    spec:
      containers:
      - name: helloredis
        image: sitronno/redishello:v1.1
        ports:
        - containerPort: 5000
