k8s/helloredis/redis.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: helloredis
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      name: redis
      labels: 
        tier : backend
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:5.0-bullseye
        ports:
        - containerPort: 6379
        command: ["/usr/local/bin/redis-server"]
        args: ["--appendonly", "yes"]
        volumeMounts:
          - name: redis-persistent-storage
            mountPath: /data
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: redis-pv-claim
