k8s/helloredis/redis.pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: helloredis
  name: redis
  labels: 
    tier : backend
    app: redis
spec:
  containers:
  - name: redis
    image: redis:5.0-bullseye
    ports:
    - containerPort: 6379
    command: ["/usr/local/bin/redis-server"]
    args: ["--appendonly", "yes"]
