k8s/helloredis/helloredis.svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: helloredis
  name: helloredis-svc
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: helloredis
    tier: frontend
