k8s/helloredis/redis.svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: helloredis
  name: redis-service
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: redis
    tier: backend
