k8s/helloredis/helloredis.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloredis-ingress
  namespace: helloredis
spec:
  ingressClassName: nginx
  rules:
  - host: helloredis.example.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloredis-svc
            port:
              number: 80
